Add language code support and tests for localization
Added explicit languageCode property to ReportPurchase and updated its usage in MainFlowView. Improved localization string for house display. Introduced SettingsLanguageTests for language-related settings. Updated LocaleHelper documentation and research to clarify language handling and API limitations.

--- a/AstroSvitla/Resources/Localizable.xcstrings
+++ b/AstroSvitla/Resources/Localizable.xcstrings
@@ -5201,8 +5201,8 @@
       "localizations": {
         "en": {
           "stringUnit": {
-            "state": "new",
-            "value": "chart.planet.position %1$@ %2$lld"
+            "state": "translated",
+            "value": "%1$@ House %2$lld"
           }
         },
         "uk": {
